fixed chat alignment

--- a/app/assets/stylesheets/components/_chat-card.scss
+++ b/app/assets/stylesheets/components/_chat-card.scss
@@ -2,6 +2,7 @@
     align-items: center;
     margin-top: 10px;
     margin-left: 8vw;
+    margin-right: -25px;
     margin-bottom: 10px;
     background: $white;
     padding: 8px 16px;
